--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Clueless Cook</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js" type="module" defer></script>
 </head>
 <body>
+<main>
+    <form id="onSubmit">
+        <label for="ingredients-field">
+            <input id="ingredients-field" type="text" placeholder="Zoek op ingrediënten">
+        </label>
+        <label for="meal-type-field">
+            <select name="meal-type-field" id="meal-type-field">
+                <option selected value="">Please select your meal type</option>
+                <option value="Breakfast">Breakfast</option>
+                <option value="Lunch">Lunch</option>
+                <option value="Dinner">Dinner</option>
+                <option value="Snack">Snack</option>
+                <option value="Teatime">Teatime</option>
+            </select>
+        </label>
+        <button type="submit">Search</button>
+    </form>
+    <ul id="recipe-card-list"></ul>
+    <span id="error-message"></span>
+</main>
 
 </body>
 </html>
