added basic html setup and started on css

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The clueless cook</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Assets/fonts/fonts.css">
     <script src="main.js" type="module" defer></script>
+
 </head>
 <body>
+<nav class="outer-container nav-container">
+    <div class="logo"><h3>The Clueless Cook</h3></div>
+    <ul class="nav-links">
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Calculator</a></li>
+    </ul>
+</nav>
+<header class="outer-container">
+    <div class="inner-container header-container">
+        <img class="main-img-header" src="">
+        <h1>Delicious Recipes</h1>
+        <h1>Daily Updated</h1>
+        <button type="button">Find Recipes</button>
+    </div>
+</header>
+<main>
+    <section class="outer-container three-img-section">
+        <img class="smaller-img" src="" alt="">
+        <img class="smaller-middle-img" src="" alt="">
+        <img class="smaller-img" src="" alt="">
+    </section>
+    <section class="outer-container search-bar">
 
+    </section>
+    <section class="outer-container recipe-cards-section">
+        <div class="recipe-cards-wrapper"></div>
+            <div class="recipe-card">
+                <img src="" alt="">
+                <div class="tex-wrapper">
+                    <p>placeholder recipe title</p>
+                    <p>placeholder calories | ingredients</p>
+                    <p>placeholder time</p>
+                </div>
+            </div>        
+    </section>
+    <footer class="outer-container">
+        <div class="inner-container wrapper-footer">
+            <div class="list-wrapper">
+                <p>Information</p>
+                <ul>
+                    <li>Lorem ipsum dolor</li>
+                    <li>Lorem ipsum</li>
+                    <li>Dolor sit</li>
+                    <li>Sit amet</li>
+                </ul>
+            </div>
+            <div class="list-wrapper">
+                <p>About</p>
+                <ul>
+                    <li>Lorem ipsum dolor</li>
+                    <li>Lorem ipsum</li>
+                    <li>Dolor sit</li>
+                </ul>
+            </div>
+            <div class="list-wrapper">
+                <p>Contact</p>
+                <ul>
+                    <li>Lorem ipsum dolor</li>
+                    <li>Lorem ipsum</li>
+                    <li>Dolor sit</li>
+                </ul>
+            </div>
+            <div class="list-wrapper">
+                <p>social</p>
+            </div>
+        </div>
+    </footer>
+
+</main>
 </body>
 </html>
