home page htm and css added almost done

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="outer-container nav-container">
-    <div class="logo"><h3>The Clueless Cook</h3></div>
+    <div class="logo"><h2>The Clueless Cook</h2></div>
     <ul class="nav-links">
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
@@ -21,29 +21,115 @@
     <div class="inner-container header-container">
         <img class="main-img-header" src="">
         <h1>Delicious Recipes</h1>
-        <h1>Daily Updated</h1>
-        <button type="button">Find Recipes</button>
+        <h1 class="header-h1-no-bold">Daily Updated</h1>
+        <button type="button">Find Recipes &#129130;</button>
     </div>
 </header>
 <main>
-    <section class="outer-container three-img-section">
-        <img class="smaller-img" src="" alt="">
-        <img class="smaller-middle-img" src="" alt="">
-        <img class="smaller-img" src="" alt="">
+    <section class="outer-container randomized-cards-section">
+        <div class="cards-position-wrapper">
+            <div class="first-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="second-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="third-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
     <section class="outer-container search-bar">
+        <form action="submit">
+
+        </form>
 
     </section>
-    <section class="outer-container recipe-cards-section">
-        <div class="recipe-cards-wrapper"></div>
-            <div class="recipe-card">
-                <img src="" alt="">
-                <div class="tex-wrapper">
-                    <p>placeholder recipe title</p>
-                    <p>placeholder calories | ingredients</p>
-                    <p>placeholder time</p>
+    <section class="outer-container search-results">
+        <div class="search-result-recipe-cards-wrapper inner-container">
+            <div class="result-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
                 </div>
-            </div>        
+            </div>
+            <div class="result-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="result-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="result-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+                </div>
+            </div>
+            <div class="result-card-wrapper general-card-style">
+                <img src="Assets/images/hero-image.jpg" alt="">
+                <div class="recipe-card-text-wrapper">
+                    <p>Recipe title</p>
+                    <div class="space-between-wrap-recipe-cards">
+                        <span>Calories | ingredients</span>
+                        <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                    </div>
+                </div>
+            </div><div class="result-card-wrapper general-card-style">
+            <img src="Assets/images/hero-image.jpg" alt="">
+            <div class="recipe-card-text-wrapper">
+                <p>Recipe title</p>
+                <div class="space-between-wrap-recipe-cards">
+                    <span>Calories | ingredients</span>
+                    <span><img class="time-icon" src="Assets/icons/time.svg" alt="time">  min.</span>
+                </div>
+            </div>
+        </div>
+
+        </div>
     </section>
     <footer class="outer-container">
         <div class="inner-container wrapper-footer">
@@ -73,7 +159,21 @@
                 </ul>
             </div>
             <div class="list-wrapper">
-                <p>social</p>
+                <p>Social</p>
+                <div class="icon-wrapper">
+                    <div class="social-media-icons">
+                        <img src="Assets/icons/facebook.svg" alt="facebook">
+                    </div>
+                    <div class="social-media-icons">
+                        <img src="Assets/icons/instagram.svg" alt="instagram">
+                    </div>
+                    <div class="social-media-icons">
+                        <img src="Assets/icons/linkedin.svg" alt="linkedin">
+                    </div>
+                    <div class="social-media-icons">
+                        <img src="Assets/icons/twitter.svg" alt="twitter">
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
