--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,55 @@
         </div>
     </section>
     <section class="outer-container search-bar">
-        <form action="submit">
-
+        <form class="inner-container" id="onSubmit">
+            <label class="search-field" for="search-field">
+                <input  id="search-field" type="text" placeholder="Recipe search">
+                <button class="search-icon-button" type="submit"><img class="search-icon" src="Assets/icons/icons8-search-30.png" alt=""></button>
+            </label>
+            <label for="meal-type-field">
+                <select name="meal-type-field" id="meal-type-field">
+                    <option selected value="">Meal type</option>
+                    <option value="Breakfast">Breakfast</option>
+                    <option value="Lunch">Lunch</option>
+                    <option value="Dinner">Dinner</option>
+                    <option value="Snack">Snack</option>
+                    <option value="Teatime">Teatime</option>
+                </select>
+            </label>
+            <label for="cuisine-field">
+                <select name="cuisine-field" id="cuisine-field">
+                    <option selected value="">Cuisine</option>
+                    <option value="Breakfast">Breakfast</option>
+                    <option value="Lunch">Lunch</option>
+                    <option value="Dinner">Dinner</option>
+                    <option value="Snack">Snack</option>
+                    <option value="Teatime">Teatime</option>
+                </select>
+            </label>
+            <label for="diet-field">
+                <select name="diet-type-field" id="diet-field">
+                    <option selected value="">Diet</option>
+                    <option value="Breakfast">Breakfast</option>
+                    <option value="Lunch">Lunch</option>
+                    <option value="Dinner">Dinner</option>
+                    <option value="Snack">Snack</option>
+                    <option value="Teatime">Teatime</option>
+                </select>
+            </label>
+            <label for="time-field">
+                <select name="time-field" id="time-field">
+                    <option selected value="">Time</option>
+                    <option value="Breakfast">Breakfast</option>
+                    <option value="Lunch">Lunch</option>
+                    <option value="Dinner">Dinner</option>
+                    <option value="Snack">Snack</option>
+                    <option value="Teatime">Teatime</option>
+                </select>
+            </label>
+            <button class="submit-button" type="submit">Search</button>
         </form>
+        <ul id="recipe-card-list"></ul>
+        <span id="error-message"></span>
 
     </section>
     <section class="outer-container search-results">
