--- a/src/recipe-page.html
+++ b/src/recipe-page.html
@@ -11,9 +11,9 @@
 <nav class="outer-container nav-container">
     <div class="logo"><h2>The Clueless Cook</h2></div>
     <ul class="nav-links">
-        <li><a href="">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="">About</a></li>
-        <li><a href="">Calculator</a></li>
+        <li><a href="calories-calculator.html">Calculator</a></li>
     </ul>
 </nav>
 <main class="outer-container recipe_page-main">
