completed recipe page js and styling some minor styling can be added

--- a/src/pages/calories-calculator.html
+++ b/src/pages/calories-calculator.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>The clueless cook</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./Assets/fonts/fonts.css">
-    <script src="caloriesCalculator.js" type="module" defer></script>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Assets/fonts/fonts.css">
+    <script src="calories-calculator.js" type="module" defer></script>
 </head>
 <body>
 <nav class="outer-container nav-container">
     <div class="logo"><h2>The Clueless Cook</h2></div>
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="">About</a></li>
         <li><a href="calories-calculator.html">Calculator</a></li>
     </ul>
@@ -25,7 +25,7 @@
             <form id="caloriesOnSubmit" >
                 <label for="calories-search-field" class="calories_product-form">
                     <input id="calories-search-field" type="text" placeholder="Barcode/Product">
-                    <img class="calories_search-icon" src="Assets/icons/icons8-search-30.png">
+                    <img class="calories_search-icon" src="../Assets/icons/icons8-search-30.png">
                 </label>
                 <button class="calories_product-form-button" type="submit">Search &#129130;</button>
             </form>
@@ -101,16 +101,16 @@
             <p>Social</p>
             <div class="icon-wrapper">
                 <div class="social-media-icons">
-                    <img src="Assets/icons/facebook.svg" alt="facebook">
+                    <img src="../Assets/icons/facebook.svg" alt="facebook">
                 </div>
                 <div class="social-media-icons">
-                    <img src="Assets/icons/instagram.svg" alt="instagram">
+                    <img src="../Assets/icons/instagram.svg" alt="instagram">
                 </div>
                 <div class="social-media-icons">
-                    <img src="Assets/icons/linkedin.svg" alt="linkedin">
+                    <img src="../Assets/icons/linkedin.svg" alt="linkedin">
                 </div>
                 <div class="social-media-icons">
-                    <img src="Assets/icons/twitter.svg" alt="twitter">
+                    <img src="../Assets/icons/twitter.svg" alt="twitter">
                 </div>
             </div>
         </div>
