--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
             </div>
         </div>
     </footer>
-    <a href="pages/recipe-page.html">click here for recipe page</a>
+    <a href="/src/pages/recipe-page.html"></a>
 </main>
 
 </body>
