added info in code and fixed link and async function in recipe page

--- a/src/pages/recipe-page.html
+++ b/src/pages/recipe-page.html
@@ -17,9 +17,10 @@
     </ul>
 </nav>
 <main class="outer-container recipe_page-main">
+    <span id="show-id"></span>
     <section class="recipe_page-recipe inner-container">
-        <article>
-            <div>
+        <article class="recipe-page-top-half">
+            <div class="recipe-title-ingredients-wrapper">
                 <div id="recipe-info-and ingredients" class="recipe_page_recipe-wrapper">
 
                 </div>
@@ -33,13 +34,13 @@
         </article>
         <article>
             <div class="recipe_page-health-labels-wrapper">
-                <h4>Health labels</h4>
+                <h3>Health labels</h3>
                 <ul id="health-labels-items" class="health-label-items">
                 </ul>
             </div>
 
             <div class="recipe_page-nutrients-wrapper">
-                <h4>Nutrients</h4>
+                <h3>Nutrients</h3>
                 <table id="nutrients-table">
                     <tr>
                         <td>Energy</td>
