--- a/src/pages/calories-calculator.html
+++ b/src/pages/calories-calculator.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="outer-container nav-container">
-    <div class="logo"><h2>The Clueless Cook</h2></div>
+    <div class="logo"><a href="../index.html"><h2>The Clueless Cook</h2></a></div>
     <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="">About</a></li>
@@ -22,7 +22,7 @@
         <h2>Calorie Calculator</h2>
 
         <div class="calories_search-bar-button-wrapper">
-            <form id="caloriesOnSubmit" >
+            <form id="caloriesOnSubmit">
                 <label for="calories-search-field" class="calories_product-form">
                     <input id="calories-search-field" type="text" placeholder="Barcode/Product">
                     <img class="calories_search-icon" src="../Assets/icons/icons8-search-30.png">
@@ -62,7 +62,7 @@
         </table>
         <table class="total-output-calories-and-serving-search">
             <tr id="total-output-calories-and-serving-search" class="border-top">
-                <td >Total</td>
+                <td>Total</td>
                 <td></td>
                 <td></td>
                 <td></td>
