--- a/src/pages/recipe-page.html
+++ b/src/pages/recipe-page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="outer-container nav-container">
-    <div class="logo"><h2>The Clueless Cook</h2></div>
+    <div class="logo"><a href="../index.html"><h2>The Clueless Cook</h2></a></div>
     <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="">About</a></li>
@@ -44,32 +44,32 @@
                 <table id="nutrients-table">
                     <tr>
                         <td>Energy</td>
-                        <td id="energy-field"></td>
+                        <td id="energy-field" class="nutrients-value"></td>
                         <td>kcal</td>
                     </tr>
                     <tr>
                         <td>Fat</td>
-                        <td id="fat-field"></td>
+                        <td id="fat-field" class="nutrients-value"></td>
                         <td>g</td>
                     </tr>
                     <tr>
                         <td>Carbs</td>
-                        <td id="carbs-field"></td>
+                        <td id="carbs-field" class="nutrients-value"></td>
                         <td>g</td>
                     </tr>
                     <tr>
                         <td>Sugar</td>
-                        <td id="sugar-field"></td>
+                        <td id="sugar-field" class="nutrients-value"></td>
                         <td>g</td>
                     </tr>
                     <tr>
                         <td>Protein</td>
-                        <td id="protein-field"></td>
+                        <td id="protein-field" class="nutrients-value"></td>
                         <td>g</td>
                     </tr>
                     <tr>
                         <td>Sodium</td>
-                        <td id="sodium-field"></td>
+                        <td id="sodium-field" class="nutrients-value"></td>
                         <td>mg</td>
                     </tr>
 
